--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +6,7 @@
 }
 html,
 body {
-  font-family: "Outfit", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
 .app-container {
@@ -27,6 +27,6 @@ body {
 }
 @media (max-width: 500px) {
   .app-container {
-    width: 98%;
+    width: 95%;
   }
 }
