--- a/frontend/src/components/Main/main.css
+++ b/frontend/src/components/Main/main.css
@@ -3,6 +3,7 @@ main h1{
     font-size: 45px;
     color: white;
     padding: 10px 0;
+    padding-top: 100px;
 }
 main p{
     color: white;
@@ -72,7 +73,12 @@ main .short-url-result{
     background-color: #1766a0;
     color: white;
 }
-
+.policy{
+    padding-top: 20px;
+    opacity: 0.5;
+    font-size: 15px;
+    font-weight: 400;
+}
 @media (max-width:800px) {
     main h1{
         font-size: 35px;
