--- a/frontend/src/components/Grid/grid.css
+++ b/frontend/src/components/Grid/grid.css
@@ -2,6 +2,7 @@
     margin-top: 30px;
     display: flex;
     justify-content: center;
+    margin-bottom: 80px;
 }
 .grid-wrapper ul{
     list-style: none;
@@ -61,6 +62,9 @@
     }
     .grid-wrapper li{
         width: 180px;
+    }
+    .grid-wrapper li .desc{
+        font-size: 15px;
     }
     
 }
